disable csrf check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -144,6 +144,7 @@ jobs:
           cd server
           ./occ config:system:set allow_local_remote_servers --value 1
           ./occ config:system:get allow_local_remote_servers
+          ./occ config:system:set csrf.disabled --value true 
           ./occ config:system:set overwrite.cli.url --value 'http://localhost:8080'
           cat config/config.php
           cd apps/integration_openproject
